fixing L mobile view spacing and margins

--- a/styles.css
+++ b/styles.css
@@ -344,3 +344,15 @@ main > div:nth-of-type(3) h4::before {
   }
 }
 
+@media (min-width: 425px) and (max-width: 767px) {
+  main {
+    padding-left: 1.5rem;
+    padding-right: 1.5rem;
+  }
+
+  .task-column > div:last-child > div {
+    width: 95%;     /* Slightly narrower than full width */
+    margin-right: 0;
+  }
+}
+
